First version of artists fragment

--- a/app/src/main/res/layout/fragment_fragment_artists.xml
+++ b/app/src/main/res/layout/fragment_fragment_artists.xml
@@ -5,9 +5,11 @@
     android:layout_height="match_parent"
     tools:context="de.peterloos.anotherjukebox.fragments.FragmentArtists">
 
-    <TextView
+    <ListView
+        android:id="@+id/listviewArtists"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:textSize="18sp"
+        android:layout_margin="3dp"/>
 
 </FrameLayout>
