First version of albums fragment

--- a/app/src/main/res/layout/fragment_fragment_player.xml
+++ b/app/src/main/res/layout/fragment_fragment_player.xml
@@ -3,13 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="de.peterloos.anotherjukebox.fragments.FragmentAlbums">
+    tools:context="de.peterloos.anotherjukebox.fragments.FragmentPlayer">
 
-    <ListView
-        android:id="@+id/listviewAlbums"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textSize="18sp"
-        android:layout_margin="3dp"/>
+        android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
