Added fourth fragment

--- a/app/src/main/res/layout/fragment_fragment_albums.xml
+++ b/app/src/main/res/layout/fragment_fragment_albums.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:tag="unique_tag_fragment_albums"
     tools:context="de.peterloos.anotherjukebox.fragments.FragmentAlbums">
 
     <ListView
