--- a/app/src/main/res/layout/fragment_fragment_player.xml
+++ b/app/src/main/res/layout/fragment_fragment_player.xml
@@ -5,10 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:tag="unique_tag_fragment_player"
+    android:id="@+id/id_fragment_player"
     tools:context="de.peterloos.anotherjukebox.fragments.FragmentPlayer">
 
     <TextView
