--- a/app/src/main/res/layout/fragment_fragment_songs.xml
+++ b/app/src/main/res/layout/fragment_fragment_songs.xml
@@ -11,8 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:textSize="25dp"
-        android:textAlignment="center" />
+        android:layout_margin="3dp"
+        android:textSize="18sp"
+        android:gravity="left" />
 
     <ListView
         android:id="@+id/listviewSongs"
@@ -20,6 +21,6 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/textviewTitle"
         android:textSize="18sp"
-        android:layout_margin="3dp"/>
+        android:layout_margin="3dp" />
 
 </RelativeLayout>
