--- a/app/src/main/res/layout/fragment_fragment_albums.xml
+++ b/app/src/main/res/layout/fragment_fragment_albums.xml
@@ -1,16 +1,37 @@
-<FrameLayout
+<?xml version="1.0" encoding="utf-8"?>
+
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:tag="unique_tag_fragment_albums"
     tools:context="de.peterloos.anotherjukebox.fragments.FragmentAlbums">
+
+    <TextView
+        android:id="@+id/textviewTitle"
+        android:text="@string/frag_albums_all_albums"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_margin="3dp"
+        android:textSize="18sp"
+        android:gravity="left" />
 
     <ListView
         android:id="@+id/listviewAlbums"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/textviewTitle"
+        android:layout_above="@+id/buttonAllAlbums"
         android:textSize="18sp"
         android:layout_margin="3dp"/>
 
-</FrameLayout>
+    <Button
+        android:id="@+id/buttonAllAlbums"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:text="@string/frag_albums_button_get_all_albums"
+        android:layout_margin="3dp"/>
+
+</RelativeLayout>
